contact and article detail overview alignment fix

--- a/src/styles/components/views/customer/_customer-detail.scss
+++ b/src/styles/components/views/customer/_customer-detail.scss
@@ -456,7 +456,7 @@
 		width: 137px;
 		height: 142px;
 		padding: 16px;
-		justify-content: center;
+		// justify-content: center;
 		align-items: center;
 		gap: 16px;
 		flex-shrink: 0;
